--- a/app/src/main/res/layout-land/item_movie.xml
+++ b/app/src/main/res/layout-land/item_movie.xml
@@ -1,43 +1,41 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_margin="5dp"
+    android:layout_margin="6dp"
     android:layout_width="match_parent" android:layout_height="wrap_content">
 
     <ImageView
-        android:id="@+id/ivPosterImage"
-        android:layout_width="90dp"
-        android:layout_height="135dp"
+        android:id="@+id/ivBackdropImage"
+        android:layout_width="320dp"
+        android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
+        android:adjustViewBounds="true"
         android:layout_marginTop="6dp"
-        android:layout_marginRight="5dp"
-        app:srcCompat="@android:color/black" />
+        android:layout_marginRight="6dp"
+        android:scaleType="fitXY"
+        app:srcCompat="@drawable/flicks_backdrop_placeholder" />
 
     <TextView
         android:id="@+id/tvTitle"
         android:layout_width="wrap_content"
+        android:textStyle="bold"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
-        android:layout_toRightOf="@+id/ivPosterImage"
-        android:text="Movie Title"
-        android:layout_marginTop="0dp"
-        android:fontFamily="sans-serif-condensed"
-        android:textStyle="bold"
-        android:textAppearance="@android:style/TextAppearance.Large"
         android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
+        android:layout_toEndOf="@+id/ivBackdropImage"
+        android:layout_toRightOf="@+id/ivBackdropImage"
+        android:fontFamily="sans-serif-condensed"
+        android:text="Movie Title"
+        android:textAppearance="@android:style/TextAppearance.Medium" />
 
     <TextView
         android:id="@+id/tvOverview"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/tvTitle"
-        android:layout_toRightOf="@+id/ivPosterImage"
-        android:text="Movie overview and synopsis"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        />
-
+        android:layout_toEndOf="@+id/ivBackdropImage"
+        android:layout_toRightOf="@+id/ivBackdropImage"
+        android:text="TextView" />
 </RelativeLayout>
